fix(layout): grid triage and regression (#1440)
* fix(table of contents): multiple scrollbars (https://github.com/jackyzha0/quartz/issues/1388)

* fix(center): Main content mininum width (https://github.com/jackyzha0/quartz/issues/1439)

* fix(code block): Horizontal overflow fix (https://github.com/jackyzha0/quartz/issues/1438, https://github.com/jackyzha0/quartz/issues/1353)

* WIP fix for ul/ol .overflow

* Fix: restore former scrollbar behavior for overflow lists (https://github.com/jackyzha0/quartz/issues/1437)

* Fix: code block overflow-x

* fix: Table of Content overflow (https://github.com/jackyzha0/quartz/issues/1437)

* Address feedback

* Move max-height toggle from js to css

--- a/quartz/components/styles/backlinks.scss
+++ b/quartz/components/styles/backlinks.scss
@@ -1,9 +1,10 @@
 @use "../../styles/variables.scss" as *;
 
 .backlinks {
-  @media all and not ($desktop) {
+  @media all and not ($mobile) {
     overflow-y: auto;
-    display: initial;
+    display: flex;
+    flex-direction: column;
     &:after {
       pointer-events: none;
       content: "";
@@ -15,10 +16,6 @@
       opacity: 1;
       transition: opacity 0.3s ease;
       background: linear-gradient(transparent 0px, var(--light));
-    }
-
-    &:has(> .overflow) {
-      position: unset;
     }
 
     & > h3 {
@@ -39,10 +36,6 @@
     }
 
     & > .overflow {
-      max-height: unset;
-      & > li:last-of-type {
-        margin-bottom: 0;
-      }
       &:after {
         display: none;
       }
